# take_home_assignment

./: .env.example  .gitignore  Instructions.md  ONTOLOGY.md  README.md  RUN.md  SETUP.md  analysis.html  analysis.ipynb  docker-compose.yml  log.md  pyproject.toml  verify.py  web.py
reznar/: assembler.py  cleanup.py  config.py  extractor.py  loader.py  mapper.py  model_client.py  ontology.py  pipeline.py  render_pages.py  repository.py  validator.py
stormland/: ontology.py
