[project]
name = "reznar-take-home"
version = "0"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.1",
    "pgserver>=0.1",
    "pydantic>=2",
    "python-stdnum>=2.2",
    "us>=3.2.0",
    "py-moneyed>=3.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
